Fix style of recent notes date on small devices

--- a/quartz/components/styles/recentNotes.scss
+++ b/quartz/components/styles/recentNotes.scss
@@ -20,7 +20,8 @@
         }
   
         & > .meta {
-          padding-right: 1em;
+          min-width: 90px;
+          padding-right: 0.5em;
           margin: 0 0 0.5rem 0;
           opacity: 0.6;
         }
